[package]
name = "geo-doc-examples"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.31"
eframe = { version = "0.31", default-features = false }
galileo = { git = "https://github.com/frewsxcv/galileo.git", branch = "frewsxcv-34E3D33E-604F-49AA-99D2-7561A0D1ABA9" }
galileo-types = { git = "https://github.com/frewsxcv/galileo.git", branch = "frewsxcv-34E3D33E-604F-49AA-99D2-7561A0D1ABA9", features = [
    "geo-types",
] }
galileo-egui = { git = "https://github.com/frewsxcv/galileo.git", branch = "frewsxcv-34E3D33E-604F-49AA-99D2-7561A0D1ABA9", features = [
    "init",
] }
geo = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["js"] }

[patch.crates-io]
eframe = { git = "https://github.com/emilk/egui.git" }
egui = { git = "https://github.com/emilk/egui.git" }
epaint = { git = "https://github.com/emilk/egui.git" }
egui-wgpu = { git = "https://github.com/emilk/egui.git" }
